crates/bc-ipc/src/snapshots/bc_ipc__import__tests__commit_failed_wire_shape.snap
---
source: crates/bc-ipc/src/import.rs
expression: round_trip(&dto)
---
{
  "batch_id": "import_batch_1",
  "kind": "failed",
  "message": "database error: disk full",
  "stage": {
    "kind": "engine"
  }
}
