crates/bc-ipc/src/snapshots/bc_ipc__import__tests__import_profiles_wire_shape.snap
---
source: crates/bc-ipc/src/import.rs
expression: round_trip(&dto)
---
{
  "documents_root_set": true,
  "profiles": [
    {
      "config_text": "{\n  \"account\": \"123456789\"\n}",
      "importer": "csv",
      "installed": false,
      "name": "groceries"
    }
  ]
}
