crates/bc-ipc/src/snapshots/bc_ipc__import__tests__preview_failed_wire_shape.snap
---
source: crates/bc-ipc/src/import.rs
expression: round_trip(&dto)
---
{
  "batch_id": null,
  "kind": "failed",
  "message": "parse error: unreadable statement",
  "stage": {
    "kind": "importer"
  }
}
